# project_euler

./: .gitignore  .gitmodules  Cargo.toml  README.md
auto_test/: Cargo.toml
auto_test/src/: lib.rs
src/: main.rs
src/lib/: collatz.rs  divisors.rs  factors.rs  fib.rs  integer.rs  mod.rs  primes.rs
src/problems/: mod.rs  p001.rs  p002.rs  p003.rs  p004.rs  p005.rs  p006.rs  p007.rs  p008.rs  p009.rs  p010.rs  p011.rs  p012.rs  p013.rs  p014.rs  p015.rs  p016.rs  p017.rs  p018.rs  p019.rs  p020.rs  p021.rs  p022.rs  p023.rs  p024.rs  p025.rs  p026.rs  p027.rs  p028.rs  p029.rs  p030.rs  p031.rs  p032.rs  p033.rs  p034.rs  p067.rs
submitter/: Cargo.toml
submitter/src/: api.rs  app.css  app.rs  captcha.rs  lib.rs  login_view.rs  router.rs  status_view.rs  submit_view.rs
submitter/src/api/: get_captcha.rs  is_authenticated.rs  login.rs  make_url.rs  mod.rs  post_solution.rs  session.rs  session_storage.rs
submitter/src/views/: login.rs  mod.rs  status.rs  submit.rs
