[package]
name = "submitter"
version = "0.1.0"
authors = ["Barnabas Forgo <speedo@devo.hu>"]
edition = "2018"

[dependencies]
dirs = "2.0.2"
lazy_static = "1.3.0"
reqwest = "0.9.19"

[dependencies.cairo-rs]
version = "0.7.1"
features = ["png"]

[dependencies.gio]
version = "0.7.0"
features = ["v2_44"]

[dependencies.gtk]
version = "0.7.0"
features = ["v3_16"]
